Prevent 'x' button from overlapping text in search inputs [fixes #27178903]

--- a/scss/widgets/_search.scss
+++ b/scss/widgets/_search.scss
@@ -3,7 +3,7 @@
 input.chorus_search {
     @include border-radius(12px);
     font-size: 14px;
-    padding: 2px 4px 0px 29px;
+    padding: 2px 22px 0px 29px;
     background: url("/images/search-icon.png") no-repeat 9px 3px;
     outline: none;
     background-color: white;
